--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "antd": "^3.9.1",
+    "d3": "^5.7.0",
+    "event-drops": "^1.3.0",
     "react": "^16.4.2",
     "react-contextmenu": "^2.9.3",
     "react-dom": "^16.4.2",
